[gd_scene load_steps=6 format=3 uid="uid://bnxo07bbnqblp"]

[ext_resource type="Script" path="res://Interactables/hud.gd" id="1_jrng0"]
[ext_resource type="PackedScene" uid="uid://d3muoiwq1oikx" path="res://Player/beat_indicator.tscn" id="2_0ffxg"]
[ext_resource type="Texture2D" uid="uid://dkroan2a4yli2" path="res://Assets/BattleUI/health_bar_fill_brown.png" id="3_q2x6t"]
[ext_resource type="Texture2D" uid="uid://dt0a2hvca0irt" path="res://Assets/BattleUI/health_bar_fill_red.png" id="4_0acop"]
[ext_resource type="Texture2D" uid="uid://cuesjx5sbu83f" path="res://Assets/BattleUI/health_bar_top_2.png" id="5_5cat8"]

[node name="HUD" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrng0")

[node name="ScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 403.0
offset_right = 301.0
offset_bottom = 477.0
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 480.0
offset_right = 672.0
offset_bottom = 550.0
color = Color(0, 0, 0, 1)

[node name="BeatIndicator" parent="." instance=ExtResource("2_0ffxg")]
position = Vector2(336, 515)
scale = Vector2(2, 2)

[node name="LifeProgress" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 275.6
offset_top = 447.2
offset_right = 371.6
offset_bottom = 487.2
scale = Vector2(1.2, 1.2)
min_value = -2.0
max_value = 5.0
step = 0.1
texture_under = ExtResource("3_q2x6t")
texture_progress = ExtResource("4_0acop")

[node name="HealthBackground" type="Sprite2D" parent="."]
visible = false
position = Vector2(335, 440)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_q2x6t")

[node name="Health" type="Sprite2D" parent="."]
visible = false
position = Vector2(335.5, 439.5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_0acop")

[node name="Outline" type="Sprite2D" parent="."]
position = Vector2(332.6, 466.2)
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_5cat8")

[node name="ComboLabel" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Combo" type="Label" parent="ComboLabel"]
layout_mode = 0
offset_left = 352.0
offset_top = 524.0
offset_right = 392.0
offset_bottom = 566.0
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 2

[node name="x" type="Label" parent="ComboLabel"]
layout_mode = 0
offset_left = 393.0
offset_top = 533.0
offset_right = 433.0
offset_bottom = 556.0
theme_override_font_sizes/font_size = 12
text = "x"
